Reorganize a bit as it's starting to take on some life....

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 
-A quick rip of the nowjs chat example...make changes and I'll deploy them on request here: http://jacobheric.com:8081/
+A quick rip of the nowjs chat example...make changes and I'll deploy them on request here: http://nulchat.jacobheric.com/
 
 To get nowjs, go here: https://github.com/Flotype/now
